componentize the label

--- a/packages/components/src/Switch/Switch.mdx
+++ b/packages/components/src/Switch/Switch.mdx
@@ -13,15 +13,15 @@ import { Switch } from ".";
 
 <ComponentStatus stage="pre" responsive="no" accessible="no" />
 
-In Jobber a Switch is used to …
-
-## Simple Example
+A switch toggles the state of a single setting to on or off
 
 <Playground>
   <Switch />
   <br />
   <Switch value={true} />
 </Playground>
+
+## Parent controlled switch
 
 <Playground>
   {() => {
