adjust icon component

--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -28,7 +28,7 @@ meaning and recommended usage.
 ## Simple Example
 
 <Playground>
-  <Icon iconName="address" />
+  <Icon name="address" />
 </Playground>
 
 ## Properties
@@ -39,205 +39,205 @@ meaning and recommended usage.
 
 ## Arrows
 
-| Icon                              | `IconName`      |
-| :-------------------------------- | :-------------- |
-| <Icon iconName="arrowDown" />     | `arrowDown`     |
-| <Icon iconName="arrowLeft" />     | `arrowLeft`     |
-| <Icon iconName="arrowRight" />    | `arrowRight`    |
-| <Icon iconName="arrowUp" />       | `arrowUp`       |
-| <Icon iconName="backArrow" />     | `backArrow`     |
-| <Icon iconName="longArrowDown" /> | `longArrowDown` |
-| <Icon iconName="longArrowUp" />   | `longArrowUp`   |
+| Icon                          | `Name`          |
+| :---------------------------- | :-------------- |
+| <Icon name="arrowDown" />     | `arrowDown`     |
+| <Icon name="arrowLeft" />     | `arrowLeft`     |
+| <Icon name="arrowRight" />    | `arrowRight`    |
+| <Icon name="arrowUp" />       | `arrowUp`       |
+| <Icon name="backArrow" />     | `backArrow`     |
+| <Icon name="longArrowDown" /> | `longArrowDown` |
+| <Icon name="longArrowUp" />   | `longArrowUp`   |
 
 ## Calendar
 
-| Icon                             | `IconName`     |
-| :------------------------------- | :------------- |
-| <Icon iconName="availability" /> | `availability` |
-| <Icon iconName="calendar" />     | `calendar`     |
-| <Icon iconName="clearFilters" /> | `clearFilters` |
-| <Icon iconName="event" />        | `event`        |
-| <Icon iconName="schedule" />     | `schedule`     |
-| <Icon iconName="task" />         | `task`         |
-| <Icon iconName="timeline" />     | `timeline`     |
+| Icon                         | `Name`         |
+| :--------------------------- | :------------- |
+| <Icon name="availability" /> | `availability` |
+| <Icon name="calendar" />     | `calendar`     |
+| <Icon name="clearFilters" /> | `clearFilters` |
+| <Icon name="event" />        | `event`        |
+| <Icon name="schedule" />     | `schedule`     |
+| <Icon name="task" />         | `task`         |
+| <Icon name="timeline" />     | `timeline`     |
 
 ## Files
 
-| Icon                           | `IconName`   |
-| :----------------------------- | :----------- |
-| <Icon iconName="addNote" />    | `addNote`    |
-| <Icon iconName="archive" />    | `archive`    |
-| <Icon iconName="attachment" /> | `attachment` |
-| <Icon iconName="excel" />      | `excel`      |
-| <Icon iconName="file" />       | `file`       |
-| <Icon iconName="note" />       | `note`       |
-| <Icon iconName="pdf" />        | `pdf`        |
-| <Icon iconName="video" />      | `video`      |
-| <Icon iconName="word" />       | `word`       |
-| <Icon iconName="upload" />     | `upload`     |
+| Icon                       | `Name`       |
+| :------------------------- | :----------- |
+| <Icon name="addNote" />    | `addNote`    |
+| <Icon name="archive" />    | `archive`    |
+| <Icon name="attachment" /> | `attachment` |
+| <Icon name="excel" />      | `excel`      |
+| <Icon name="file" />       | `file`       |
+| <Icon name="note" />       | `note`       |
+| <Icon name="pdf" />        | `pdf`        |
+| <Icon name="video" />      | `video`      |
+| <Icon name="word" />       | `word`       |
+| <Icon name="upload" />     | `upload`     |
 
 ## Forms
 
-| Icon                          | `IconName`  |
-| :---------------------------- | :---------- |
-| <Icon iconName="checkbox" />  | `checkbox`  |
-| <Icon iconName="edit" />      | `edit`      |
-| <Icon iconName="star" />      | `star`      |
-| <Icon iconName="starFill" />  | `starFill`  |
-| <Icon iconName="textBlock" /> | `textBlock` |
-| <Icon iconName="textBox" />   | `textBox`   |
-| <Icon iconName="textField" /> | `textField` |
-| <Icon iconName="dropdown" />  | `dropdown`  |
-| <Icon iconName="trash" />     | `trash`     |
+| Icon                      | `Name`      |
+| :------------------------ | :---------- |
+| <Icon name="checkbox" />  | `checkbox`  |
+| <Icon name="edit" />      | `edit`      |
+| <Icon name="star" />      | `star`      |
+| <Icon name="starFill" />  | `starFill`  |
+| <Icon name="textBlock" /> | `textBlock` |
+| <Icon name="textBox" />   | `textBox`   |
+| <Icon name="textField" /> | `textField` |
+| <Icon name="dropdown" />  | `dropdown`  |
+| <Icon name="trash" />     | `trash`     |
 
 ## Help
 
-| Icon                      | `IconName` |
-| :------------------------ | :--------- |
-| <Icon iconName="alert" /> | `alert`    |
-| <Icon iconName="help" />  | `help`     |
-| <Icon iconName="knot" />  | `knot`     |
+| Icon                  | `Name`  |
+| :-------------------- | :------ |
+| <Icon name="alert" /> | `alert` |
+| <Icon name="help" />  | `help`  |
+| <Icon name="knot" />  | `knot`  |
 
 ## Map
 
-| Icon                           | `IconName`   |
-| :----------------------------- | :----------- |
-| <Icon iconName="address" />    | `address`    |
-| <Icon iconName="directions" /> | `directions` |
-| <Icon iconName="moveMarker" /> | `moveMarker` |
-| <Icon iconName="property" />   | `property`   |
+| Icon                       | `Name`       |
+| :------------------------- | :----------- |
+| <Icon name="address" />    | `address`    |
+| <Icon name="directions" /> | `directions` |
+| <Icon name="moveMarker" /> | `moveMarker` |
+| <Icon name="property" />   | `property`   |
 
 ## Messaging
 
-| Icon                         | `IconName` |
-| :--------------------------- | :--------- |
-| <Icon iconName="chat" />     | `chat`     |
-| <Icon iconName="email" />    | `email`    |
-| <Icon iconName="markSent" /> | `markSent` |
-| <Icon iconName="reminder" /> | `reminder` |
-| <Icon iconName="sms" />      | `sms`      |
-| <Icon iconName="sms2" />     | `sms2`     |
+| Icon                     | `Name`     |
+| :----------------------- | :--------- |
+| <Icon name="chat" />     | `chat`     |
+| <Icon name="email" />    | `email`    |
+| <Icon name="markSent" /> | `markSent` |
+| <Icon name="reminder" /> | `reminder` |
+| <Icon name="sms" />      | `sms`      |
+| <Icon name="sms2" />     | `sms2`     |
 
 ## User
 
-| Icon                               | `IconName`       |
-| :--------------------------------- | :--------------- |
-| <Icon iconName="avatar" />         | `avatar`         |
-| <Icon iconName="clients" />        | `clients`        |
-| <Icon iconName="person" />         | `person`         |
-| <Icon iconName="user" />           | `user`           |
-| <Icon iconName="userSwitch" />     | `userSwitch`     |
-| <Icon iconName="userUnassigned" /> | `userUnassigned` |
-| <Icon iconName="vcard" />          | `vcard`          |
+| Icon                           | `Name`           |
+| :----------------------------- | :--------------- |
+| <Icon name="avatar" />         | `avatar`         |
+| <Icon name="clients" />        | `clients`        |
+| <Icon name="person" />         | `person`         |
+| <Icon name="user" />           | `user`           |
+| <Icon name="userSwitch" />     | `userSwitch`     |
+| <Icon name="userUnassigned" /> | `userUnassigned` |
+| <Icon name="vcard" />          | `vcard`          |
 
 ## Social media
 
-| Icon                           | `IconName`   |
-| :----------------------------- | :----------- |
-| <Icon iconName="angieslist" /> | `angieslist` |
-| <Icon iconName="facebook" />   | `facebook`   |
-| <Icon iconName="googlePlay" /> | `googlePlay` |
-| <Icon iconName="google" />     | `google`     |
-| <Icon iconName="instagram" />  | `instagram`  |
-| <Icon iconName="linkedIn" />   | `linkedIn`   |
-| <Icon iconName="twitter" />    | `twitter`    |
-| <Icon iconName="yelp" />       | `yelp`       |
-| <Icon iconName="youtube" />    | `youtube`    |
+| Icon                       | `Name`       |
+| :------------------------- | :----------- |
+| <Icon name="angieslist" /> | `angieslist` |
+| <Icon name="facebook" />   | `facebook`   |
+| <Icon name="googlePlay" /> | `googlePlay` |
+| <Icon name="google" />     | `google`     |
+| <Icon name="instagram" />  | `instagram`  |
+| <Icon name="linkedIn" />   | `linkedIn`   |
+| <Icon name="twitter" />    | `twitter`    |
+| <Icon name="yelp" />       | `yelp`       |
+| <Icon name="youtube" />    | `youtube`    |
 
 ## Transaction
 
-| Icon                             | `IconName`     |
-| :------------------------------- | :------------- |
-| <Icon iconName="ePayment" />     | `ePayment`     |
-| <Icon iconName="payment" />      | `payment`      |
-| <Icon iconName="percent" />      | `percent`      |
-| <Icon iconName="shoppingCart" /> | `shoppingCart` |
-| <Icon iconName="wallet" />       | `wallet`       |
+| Icon                         | `Name`         |
+| :--------------------------- | :------------- |
+| <Icon name="ePayment" />     | `ePayment`     |
+| <Icon name="payment" />      | `payment`      |
+| <Icon name="percent" />      | `percent`      |
+| <Icon name="shoppingCart" /> | `shoppingCart` |
+| <Icon name="wallet" />       | `wallet`       |
 
 ## Work
 
-| Icon                         | `IconName` |
-| :--------------------------- | :--------- |
-| <Icon iconName="chemical" /> | `chemical` |
-| <Icon iconName="clockIn" />  | `clockIn`  |
-| <Icon iconName="clockOut" /> | `clockOut` |
-| <Icon iconName="expense" />  | `expense`  |
-| <Icon iconName="timer" />    | `timer`    |
-| <Icon iconName="work" />     | `work`     |
+| Icon                     | `Name`     |
+| :----------------------- | :--------- |
+| <Icon name="chemical" /> | `chemical` |
+| <Icon name="clockIn" />  | `clockIn`  |
+| <Icon name="clockOut" /> | `clockOut` |
+| <Icon name="expense" />  | `expense`  |
+| <Icon name="timer" />    | `timer`    |
+| <Icon name="work" />     | `work`     |
 
 ## Request
 
-| Icon                        | `IconName` |
-| :-------------------------- | :--------- |
-| <Icon iconName="request" /> | `request`  |
+| Icon                    | `Name`    |
+| :---------------------- | :-------- |
+| <Icon name="request" /> | `request` |
 
 ## Quote
 
-| Icon                          | `IconName`  |
-| :---------------------------- | :---------- |
-| <Icon iconName="quote" />     | `quote`     |
-| <Icon iconName="quoteCopy" /> | `quoteCopy` |
+| Icon                      | `Name`      |
+| :------------------------ | :---------- |
+| <Icon name="quote" />     | `quote`     |
+| <Icon name="quoteCopy" /> | `quoteCopy` |
 
 ## Job
 
-| Icon                           | `IconName`   |
-| :----------------------------- | :----------- |
-| <Icon iconName="job" />        | `job`        |
-| <Icon iconName="jobOnHold" />  | `jobOnHold`  |
-| <Icon iconName="moveVisits" /> | `moveVisits` |
-| <Icon iconName="visit" />      | `visit`      |
+| Icon                       | `Name`       |
+| :------------------------- | :----------- |
+| <Icon name="job" />        | `job`        |
+| <Icon name="jobOnHold" />  | `jobOnHold`  |
+| <Icon name="moveVisits" /> | `moveVisits` |
+| <Icon name="visit" />      | `visit`      |
 
 ## Invoice
 
-| Icon                             | `IconName`     |
-| :------------------------------- | :------------- |
-| <Icon iconName="badInvoice" />   | `badInvoice`   |
-| <Icon iconName="invoice" />      | `invoice`      |
-| <Icon iconName="invoiceLater" /> | `invoiceLater` |
-| <Icon iconName="paidInvoice" />  | `paidInvoice`  |
-| <Icon iconName="sendInvoice" />  | `sendInvoice`  |
+| Icon                         | `Name`         |
+| :--------------------------- | :------------- |
+| <Icon name="badInvoice" />   | `badInvoice`   |
+| <Icon name="invoice" />      | `invoice`      |
+| <Icon name="invoiceLater" /> | `invoiceLater` |
+| <Icon name="paidInvoice" />  | `paidInvoice`  |
+| <Icon name="sendInvoice" />  | `sendInvoice`  |
 
 ## Other
 
-| Icon                           | `IconName`   |
-| :----------------------------- | :----------- |
-| <Icon iconName="more" />       | `more`       |
-| <Icon iconName="add" />        | `add`        |
-| <Icon iconName="camera" />     | `camera`     |
-| <Icon iconName="checkmark" />  | `checkmark`  |
-| <Icon iconName="cog" />        | `cog`        |
-| <Icon iconName="dashboard" />  | `dashboard`  |
-| <Icon iconName="download" />   | `download`   |
-| <Icon iconName="link" />       | `link`       |
-| <Icon iconName="eye" />        | `eye`        |
-| <Icon iconName="eyeCrossed" /> | `eyeCrossed` |
-| <Icon iconName="grid" />       | `grid`       |
-| <Icon iconName="lock" />       | `lock`       |
-| <Icon iconName="logout" />     | `logout`     |
-| <Icon iconName="management" /> | `management` |
-| <Icon iconName="menu" />       | `menu`       |
-| <Icon iconName="microphone" /> | `microphone` |
-| <Icon iconName="phone" />      | `phone`      |
-| <Icon iconName="quickbooks" /> | `quickbooks` |
-| <Icon iconName="redo" />       | `redo`       |
-| <Icon iconName="remove" />     | `remove`     |
-| <Icon iconName="reports" />    | `reports`    |
-| <Icon iconName="search" />     | `search`     |
-| <Icon iconName="sort" />       | `sort`       |
-| <Icon iconName="starburst" />  | `starburst`  |
-| <Icon iconName="sun" />        | `sun`        |
-| <Icon iconName="sync" />       | `sync`       |
-| <Icon iconName="thumbsUp" />   | `thumbsUp`   |
-| <Icon iconName="xero" />       | `xero`       |
+| Icon                       | `Name`       |
+| :------------------------- | :----------- |
+| <Icon name="more" />       | `more`       |
+| <Icon name="add" />        | `add`        |
+| <Icon name="camera" />     | `camera`     |
+| <Icon name="checkmark" />  | `checkmark`  |
+| <Icon name="cog" />        | `cog`        |
+| <Icon name="dashboard" />  | `dashboard`  |
+| <Icon name="download" />   | `download`   |
+| <Icon name="link" />       | `link`       |
+| <Icon name="eye" />        | `eye`        |
+| <Icon name="eyeCrossed" /> | `eyeCrossed` |
+| <Icon name="grid" />       | `grid`       |
+| <Icon name="lock" />       | `lock`       |
+| <Icon name="logout" />     | `logout`     |
+| <Icon name="management" /> | `management` |
+| <Icon name="menu" />       | `menu`       |
+| <Icon name="microphone" /> | `microphone` |
+| <Icon name="phone" />      | `phone`      |
+| <Icon name="quickbooks" /> | `quickbooks` |
+| <Icon name="redo" />       | `redo`       |
+| <Icon name="remove" />     | `remove`     |
+| <Icon name="reports" />    | `reports`    |
+| <Icon name="search" />     | `search`     |
+| <Icon name="sort" />       | `sort`       |
+| <Icon name="starburst" />  | `starburst`  |
+| <Icon name="sun" />        | `sun`        |
+| <Icon name="sync" />       | `sync`       |
+| <Icon name="thumbsUp" />   | `thumbsUp`   |
+| <Icon name="xero" />       | `xero`       |
 
 ## Legacy
 
-| Icon                       | `IconName` |
-| :------------------------- | :--------- |
-| <Icon iconName="apple" />  | `apple`    |
-| <Icon iconName="cross" />  | `cross`    |
-| <Icon iconName="list" />   | `list`     |
-| <Icon iconName="minus" />  | `minus`    |
-| <Icon iconName="minus2" /> | `minus2`   |
-| <Icon iconName="plus" />   | `plus`     |
-| <Icon iconName="plus2" />  | `plus2`    |
+| Icon                   | `Name`   |
+| :--------------------- | :------- |
+| <Icon name="apple" />  | `apple`  |
+| <Icon name="cross" />  | `cross`  |
+| <Icon name="list" />   | `list`   |
+| <Icon name="minus" />  | `minus`  |
+| <Icon name="minus2" /> | `minus2` |
+| <Icon name="plus" />   | `plus`   |
+| <Icon name="plus2" />  | `plus2`  |
