--- a/packages/components/src/Switch/Switch.mdx
+++ b/packages/components/src/Switch/Switch.mdx
@@ -13,7 +13,7 @@ import { Switch } from ".";
 
 <ComponentStatus stage="pre" responsive="yes" accessible="yes" />
 
-A switch toggles the state of a single setting to on or off
+A switch toggles the state of a single setting to on or off.
 
 <Playground>
   <Switch ariaLabel="Visible to clients" />
