add first pass on actions in modal

--- a/packages/components/src/Modal/Modal.mdx
+++ b/packages/components/src/Modal/Modal.mdx
@@ -19,7 +19,7 @@ In Jobber a Modal is used to …
 
 <Playground>
   {() => {
-    const [value, setValue] = useState(false);
+    const [value, setValue] = useState(true);
     return (
       <>
         <button onClick={() => setValue(!value)}>Open Modal</button>
