--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -19,18 +19,105 @@ elements for buttons in favour of things like spans or divs so we get
 accessibility out of the box.
 
 <Playground>
+  <Button
+    label="Submit"
+    onClick={() => {
+      alert("✅");
+    }}
+  />
+</Playground>
+
+## Work actions
+
+Use Work Actions buttons to enable user interactions in the goal of completing
+work in Jobber.
+
+### Primary
+
+The most important action in a view. Examples include the Save Job button, Log
+In, or the main action in a dialog. There should be one Primary action per view,
+at most.
+
+<Playground>
   <Button label="Submit" />
+</Playground>
+
+### Secondary
+
+A secondary button should be used when...
+
+- there is one or more alternative, but less important, actions to the primary
+  action
+
+<Playground>
   <Button label="Submit" variation="secondary" />
+</Playground>
+
+### Tertiary
+
+A tertiary button should be used to complete actions within the view such as
+editing, revealing details, or navigating within the view.
+
+<Playground>
   <Button label="Submit" variation="tertiary" />
-  <br />
+</Playground>
+
+## Learning Actions
+
+Use the Learning Actions buttons to enable user interactions in the goal of
+learning about Jobber, whether for marketing or coaching purposes.
+
+### Primary, Secondary, Tertiary
+
+The usage pattern for Learning Actions should follow the same logic as Work
+Actions for all three levels.
+
+<Playground>
   <Button label="Learn More" interactionType="learning" />
   <Button label="Learn More" interactionType="learning" variation="secondary" />
   <Button label="Learn More" interactionType="learning" variation="tertiary" />
-  <br />
+</Playground>
+
+## Destructive Actions
+
+Destructive actions remove something from Jobber.
+
+### Primary
+
+A Primary destructive action will permanently destroy an object carrying
+signficant data, such as a job, quote, or client. This destructive action should
+be contained in a confirmation dialog triggered by clicking a Secondary
+destructive button.
+
+### Secondary
+
+A Secondary destructive action will either...
+
+- destroy an item on an object that can be quickly restored, such as a line item
+  on a job
+- trigger a dialog to confirm a Primary destructive action
+
+<Playground>
   <Button label="Delete" interactionType="destructive" />
   <Button label="Delete" interactionType="destructive" variation="secondary" />
-  <br />
+</Playground>
+
+## Cancel Actions
+
+Cancel actions allow the user to opt out of completing an action they have
+triggered, whether that action is Work, Learning, or Destructive.
+
+<Playground>
   <Button label="Cancel" interactionType="cancel" />
+</Playground>
+
+## Disabled Buttons
+
+Buttons can be disabled for a number of reasons, users may need to do an action
+first or they may not be ready to use that button.
+
+<Playground>
+  <Button label="Submit" disabled />
 </Playground>
 
 ## Button Properties
