support icons on buttons

--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -162,6 +162,23 @@ Buttons comes in 2 extra sizes.
   <Button label="Submit" size="large" />
 </Playground>
 
+## Icons
+
+You can use icons inside buttons. They can stand-alone, or appear before, after,
+or on top of the button label. They can also be added before or after the label.
+
+<Playground>
+  <Button label="More" variation="secondary" icon="more" />
+  <br />
+  <br />
+  <Button
+    label="Actions"
+    variation="secondary"
+    icon="arrowDown"
+    iconOnRight={true}
+  />
+</Playground>
+
 ## Button Properties
 
 <Props of={Button} />
