--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -13,10 +13,7 @@ import { Button } from ".";
 <ComponentStatus stage="rc" responsive="yes" accessible="yes" />
 
 Buttons are a core user interface component, as they allow users to initiate,
-complete, and reverse actions. Button classes can be applied to a number of HTML
-elements button, anchor, or submit inputs. We should always use semantic
-elements for buttons in favour of things like spans or divs so we get
-accessibility out of the box.
+complete, and reverse actions.
 
 <Playground>
   <Button
