add button loading state

--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -179,3 +179,17 @@ or on top of the button label. They can also be added before or after the label.
     iconOnRight={true}
   />
 </Playground>
+
+## Loading
+
+A way to communicate to the user that a background action is being performed.
+
+<Playground>
+  <Button label="Deleting..." type="primary" variation="destructive" loading />
+  <br />
+  <br />
+  <Button label="Loading..." type="tertiary" variation="learning" loading />
+  <br />
+  <br />
+  <Button label="Canceling..." variation="cancel" loading />
+</Playground>
